--- a/css/style.css
+++ b/css/style.css
@@ -41,3 +41,22 @@ h1 {
   font-weight: 400;
   font-size: 40px;
 }
+
+@media (max-width:700px) {
+  #clock {
+    max-width: 80%;
+    margin: auto;
+    font-size: 4em;
+    font-weight: 400;
+  }
+
+  #day {
+    font-size: 2em;
+  }
+
+  img {
+    margin: auto;
+    max-width: 90%;
+  }
+
+}
