--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,20 @@ h1 {
   font-size: 40px;
 }
 
+.weather-info {
+  background: #eee;
+  max-width: 50%;
+  margin: auto;
+  color: #222;
+  border-radius: 3px;
+  margin-top: 10px;
+}
+
+.weather-info th {
+  list-style-type: none;
+  padding: 0.6em;
+}
+
 @media (max-width:700px) {
   #clock {
     max-width: 80%;
